<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">uMappin</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="action_new_message">New message</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">uMappin</string>
    <string name="button_positive">OK</string>
    <string name="loading">Loading</string>
    <string name="button_negative">Cancel</string>
    <string name="logout_title">Log out</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="empty_list">The list is empty</string>
    <string name="empty_folder_description">PNG image of an empty folder</string>
    <string name="user_image_description">User\'s image</string>
    <string name="open_drawer">Sidemenu opened</string>
    <string name="close_drawer">Siemenu closed</string>
    <string name="album_name">uMappin photos</string>
    <string name="action_near_routes">Near routes</string>
    <string name="current_picture">Current picture</string>
    <string name="action_upload_photo">Upload photo</string>
    <string name="action_new_photo">New photo</string>
    <string name="reply">Reply</string>
    <string name="route_tag">Tag</string>
    <string name="name">Name</string>
    <string name="distance">Distance</string>
    <string name="difficulty">Difficulty</string>
    <string name="title_exit_dialog">Exit</string>
    <string name="message_exit_dialog">Are you sure you want to exit the app?</string>
    <string name="photo_title">Photo title</string>
    <string name="photo_desc">Photo Description</string>
    <string name="upload">Upload</string>
    <string name="photo_upload">Upload photo</string>
    <string name="sended_photo_toast">Your photo has been sended</string>
    <string name="receivers">Receivers</string>
    <string name="send">Send</string>
    <string name="subject">subject</string>
    <string name="message">message</string>
    <string name="like">Like</string>

</resources>